--- a/app/css/user-gallery.scss
+++ b/app/css/user-gallery.scss
@@ -7,8 +7,14 @@
     grid-template-rows: auto;
     grid-gap: 16px;
 
+    // Mobile View
     @media screen and (max-width: 480px) {
       grid-template-columns: 1fr;
+    }
+
+    // Tablet View
+    @media screen and (min-width: 701px) and (max-width: 1120px) {
+      grid-template-columns: repeat(2, 50%);
     }
   }
 
